# kafka-bridge-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
proto/kafka/: kafka.proto
src/: bridge-stream.rs  server.rs
