[package]
name = "kafka-bridge"
version = "0.1.0"
authors = ["adrian <adriancoutsoftides@gmail.com>"]
edition = "2018"

[[bin]]
name = "kafka-bridge-server"
path = "src/server.rs"

[dependencies]
tonic="0.4"
prost = "0.7"
tokio = {version ="1.2", features=["macros", "rt-multi-thread"]}
tokio-stream = { version =  "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3"
rdkafka = "0.25.0"
log = "0.4"
pretty_env_logger = "0.4.0"

[build-dependencies]
tonic-build = "0.4"

[profile.release]
lto = true
